force-app/main/default/objects/Campaign/fields/Five9__Five9CallNow__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9CallNow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets Five9 callNowMode to &apos;ANY&apos;</description>
    <inlineHelpText>All new campaign members are added to Five9 list with &apos;call now mode&apos; set to &apos;ANY&apos;</inlineHelpText>
    <label>Five9 Call Now</label>
    <type>Checkbox</type>
</CustomField>