force-app/main/default/objects/Campaign/fields/Five9__Five9Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9Endpoint__c</fullName>
    <label>Five9 WS Endpoint</label>
    <type>Url</type>
</CustomField>