force-app/main/default/objects/Campaign/fields/Five9__Five9User__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9User__c</fullName>
    <label>Five9 User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>